@@ -1,3 +1,7 @@
+2007-03-07  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-handle-insert-directory): Check (featurep 'ls-lisp).
+
 2007-03-05  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-make-temp-file): New parameter FILENAME.  Append
